--- a/PubTools/PubTools.csproj
+++ b/PubTools/PubTools.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DataTool.cs" />
     <Compile Include="data\Account.cs" />
     <Compile Include="data\DataProcess.cs" />
+    <Compile Include="data\Instrument.cs" />
     <Compile Include="data\MarketData.cs" />
     <Compile Include="data\MD.cs" />
     <Compile Include="data\Order.cs" />
